# ldap-syncer

./: .gitignore  pyproject.toml
dingtalk/api/rest/: OapiAlitripBtripApplyGetRequest.py  OapiAlitripBtripApplySearchRequest.py  OapiAlitripBtripApprovalModifyRequest.py  OapiAlitripBtripApprovalNewRequest.py  OapiAlitripBtripFlightOrderSearchRequest.py  OapiAlitripBtripHotelOrderSearchRequest.py  OapiAlitripBtripTrainOrderSearchRequest.py  OapiAlitripBtripVehicleOrderSearchRequest.py  OapiAttendanceGetsimplegroupsRequest.py  OapiAttendanceGroupAddRequest.py  OapiAttendanceVacationTypeCreateRequest.py  OapiAttendanceVacationTypeListRequest.py  OapiAttendanceVacationTypeUpdateRequest.py  OapiBlackboardGetRequest.py  OapiCateringApplylistCorpidlistGetRequest.py  OapiCateringCooplistGetRequest.py  OapiCateringOpenOrderPushRequest.py  OapiCateringPredeductRequest.py  OapiContactRolevisibilityUpdateRequest.py  OapiCrmObjectdataCustomerCreateRequest.py  OapiCrmObjectdataCustomerUpdateRequest.py  OapiCrmObjectdataFollowrecordQueryRequest.py  OapiDingtaxUserPushRequest.py  OapiEduStudentCreateRequest.py  OapiFinanceIdCardOcrRequest.py  OapiFinanceLoanBankcardDeleteRequest.py  OapiFinanceLoanNotifyRepaymentNoticeRequest.py  OapiImChatScencegroupMessageQueryRequest.py  OapiImChatScencegroupMessageSendV2Request.py  OapiImChatScenegroupCreateRequest.py  OapiKacOpenliveWhiteUsersBatchDeleteRequest.py  OapiProcessSaveRequest.py  (+21 more)
src/: config.py  main.py  sync.py
src/utils/: __init__.py  driver.py  paser.py  provider.py  schemas.py
tests/: test_ldap_syncer.py
