[tool.poetry]
name = "ldap-syncer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
ldap3 = "^2.9"
pydantic = {extras = ["email", "dotenv"], version = "^1.8.2"}
pypinyin = "^0.42.0"
cryptography = "^3.4.7"
fastapi = "^0.68.0"
uvicorn = "^0.14.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^21.7b0", allow-prereleases = true}
ipython = "^7.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
